--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,17 +4,17 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Copy requirements
-COPY requirements.txt .
+# Copy requirements from backend directory
+COPY ./requirements.txt .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy entire backend application
 COPY . .
 
-# Expose port
+# Expose port (Railway will use $PORT env var)
 EXPOSE 8000
 
-# Start command
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Start command - Railway will inject PORT env variable
+CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
