--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 httpx>=0.25.2
 python-multipart>=0.0.6
-passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
+passlib==1.7.4
 python-jose[cryptography]>=3.3.0
 email-validator>=2.0.0
